--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
     "author": "Sylvain Peyrefitte",
     "version": "0.3.0",
     "engines": [
-      "node = 0.10.x"
+        "node = 0.10.x"
     ],
     "description": "Remote Desktop Protocol in Node.js",
     "license": "AGPL v3.0",
     "repository": {
-      "type": "git",
-      "url": "https://github.com/citronneur/node-rdpjs"
+        "type": "git",
+        "url": "https://github.com/citronneur/node-rdpjs"
     },
     "main": "index.js",
     "dependencies": {
-      "starttls": "^1.0.0",
-      "lodash": "3.3.0"
+        "lodash": "3.3.0",
+        "node-forge": "^1.3.1",
+        "starttls": "^1.0.0"
     }
-  }
+}
